# europass-mcp

./: .env.example  .gitignore  CV-Europass-Progres.error.html  README.md  benchmark_llm.py  europass-enriched.xml  pyproject.toml  test_both.py  test_docx_to_pdf.py  test_llm_comparison.py
docs/: REVERSE_ENGINEERING.md
input/: europass.xml
schema/: mac_schema.json  sample_mac.json
scripts/: europass_playwright.py  generate_enriched_europass.py  update_mac.py
src/: analyze_pdf_layout.py  cv_extractor.py  europass_playwright.py  europass_validator.py  html_transform.py  mac_schema.py  markdown_transform.py  mcp_server.py  optimize_content.py  quill_schema.py
src/europass_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_docx_to_quill.py  test_e2e_roundtrip.py  test_formatting_preservation.py  test_html_transform.py  test_markdown_to_quill.py  test_markdown_transform.py  test_mcp_server.py  test_property_based.py  test_quill_schema.py  test_schema_validation.py
tests/benchmarks/: __init__.py  test_extraction_quality.py
tests/benchmarks/fixtures/: .gitkeep  example.ground_truth.json.template
tests/benchmarks/results/: .gitkeep
