[project]
name = "europass-generator"
version = "1.0.0"
description = "Europass CV PDF Generator MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14",
    "markitdown[docx,pdf]>=0.1",
    "phonenumbers>=8.13",
    "playwright>=1.50",
    "pypdf>=5.0",
]

[project.optional-dependencies]
llm = [
    "trustcall>=0.0.35",
    "langchain-openai>=1.0",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
europass-pdf = "src.europass_playwright:main"
europass-enrich = "src.generate_enriched_europass:main"
europass-mcp = "src.mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
